[#237] fix: command menu z-index

--- a/src/styles/4-components/commandMenu/_commandMenu.scss
+++ b/src/styles/4-components/commandMenu/_commandMenu.scss
@@ -24,6 +24,7 @@
   left: 0;
 }
 [cmdk-dialog] {
+  z-index: 2;
   border-radius: 6px;
   box-shadow: rgba(14, 18, 22, 0.35) 0px 10px 38px -10px,
     rgba(14, 18, 22, 0.2) 0px 10px 20px -15px;
